Improve small adjustements

--- a/index.html
+++ b/index.html
@@ -415,20 +415,20 @@
         </div>
         <div class="m-4 pt-5" id="did-you-know">
             <h1>Did you know...?</h1>
-            <div class="m-3 curiosities">
+            <div class="m-3 text-center curiosities">
                 Josh Dallas (Prince Charming) and Ginnifer Goodwin (Snow White) went on to marry in real life.
                 <br>
                 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/075/original/abf2a5a9c5222744_GettyImages-174150774.jpg?1707738754"
                     alt="" class="img-fluid mt-3 did-you-know-images">
 
             </div>
-            <div class="m-3 curiosities">
+            <div class="m-3 text-center curiosities">
                 Most of the objects in Mr. Golds were brought in by the cast.
                 <br>
                 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/079/original/maxresdefault.jpg?1707739245"
                     alt="" class="img-fluid mt-3 curiosities-images">
             </div>
-            <div class="m-3 curiosities">
+            <div class="m-3 text-center curiosities">
                 Several times during the series, Mr. Gold is seen wearing a wedding ring. This is because Robert Carlyle
                 has
                 forgotten
@@ -437,7 +437,7 @@
                 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/083/original/20823568ouatgold1280-1437176483365.jpg?1707739549"
                     alt="" class="img-fluid mt-3 curiosities-images">
             </div>
-            <div class="m-3 curiosities">
+            <div class="m-3 text-center curiosities">
                 Of all of the Prince and Princess couples that could have been the focal point of the series, Snow White
                 and Prince
                 Charming were chosen, because of Snow White and the Seven Dwarfs (1937) being the first movie Disney
@@ -446,7 +446,7 @@
                 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/090/original/Prince-Charming-And-Snow-White-disney-princess-couples-18702172-500-339.jpg?1707744350"
                     alt="" class="img-fluid mt-3 curiosities-images">
             </div>
-            <div class="m-3 curiosities">
+            <div class="m-3 text-center curiosities">
                 The creators formally offered the part of the Blue Fairy, a.k.a. Mother Superior to singer Lady Gaga.
                 However, according
                 to Edward Kitsis, they never heard back from her management staff. The part then went to Keegan Connor
@@ -454,40 +454,6 @@
                 <br>
                 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/091/original/1203554-keegan-connor-tracy-as-the-blue-fairy-on-once.jpg?1707744555"
                     alt="" class="img-fluid mt-3 did-you-know-images">
-            </div>
-            <div class="m-3 curiosities">
-                Names for many characters in Storybrooke are often coordinated with their fairy tale counterpart. For
-                example:
-                <ul>
-                    <li class="m-2">Mary Margaret Blanchard (Snow White): Blanchard derives from the French word "blanc"
-                        or "blanche" for white. The name
-                        "Mary Margaret" is from a real-life woman believed to be the inspiration of the Snow White
-                        character named "Maria Sophia
-                        Margaretha Catharina Freifräulein Von Erthal" (born on June 15, 1729 in Germany).</li>
-                    <li class="m-2">Regina Mills (Evil Queen): Regina is a Late Latin and Modern Italian feminine noun
-                        and name meaning "queen". Regina's
-                        grandfather was a Miller so that is a connection to her last name.</li>
-                    <li class="m-2">David Nolan (Prince Charming): The masculine name David means "darling" or
-                        "beloved." In Biblical text, it is also the
-                        name of the shepherd who became King David after defeating the Goliath the giant. Nolan is a
-                        Gaelic name meaning
-                        "noble," "fighter," or "champion."</li>
-                    <li class="m-2">Mr. Gold (Rumpelstiltskin): Rumpelstiltskin spun straw into gold in his story.</li>
-                    <li class="m-2">Ruby (Red Riding Hood): A ruby is a pink to blood-red colored gemstone.</li>
-                    <li class="m-2">Ashley Boyd (Cinderella): Cinders precede ashes in the burning process. Also,
-                        Cinderella was originally called
-                        Ashputtel. Boyd derives from the Gaelic word "buidhe" meaning yellow-haired.</li>
-                    <li class="m-2">Sidney Glass (Mirror): Because another word for mirror is glass or looking glass.
-                        Also, his newspaper is called "The
-                        Mirror." Sidney's character as the Queen's minion trapped in a mirror parallels a genie trapped
-                        in a bottle/lamp as a
-                        master's servant. The name Sidney refers to Sidney Sheldon, the creator of I Dream of Jeannie
-                        (1965).</li>
-                    <li class="m-2">Archie Hopper (Jiminy Cricket): Crickets are sometimes called hoppers, because they
-                        hop to get around. "Archie" could
-                        also allude to the cockroach poet created in 1916 by Don Marquis.</li>
-                    </li>
-                </ul>
             </div>
         </div>
         <div class="m-4 pt-5" id="watch">
