--- a/index.html
+++ b/index.html
@@ -145,6 +145,13 @@
                 width: 750px;
             }
         }
+
+        @media (min-width: 1700px) {
+            p,
+            .curiosities {
+                font-size: 30px;
+            }
+        }
     </style>
     <nav class="navbar navbar-expand-lg sticky-top" style="background-color: var(--primary-color-transparent);"
         data-bs-theme="dark">
