Make html SEO friendly

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="row align-items-center">
                 <div class="col-sm-6">
                     <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/581/original/2990d79e0110b3fddc604b1b81ebfae4.jpg?1707472987"
-                        alt="Picture of the cast in Once Upon a Time"
+                        alt="Cover picture of Once Upon a Time, showing the main characters"
                         class="img-fluid m-3 rounded shadow-sm p-2 border main-characters">
                 </div>
                 <div class="col-sm-6">
@@ -265,7 +265,7 @@
         </div>
         <div class="text-center"><img
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/556/original/once_upon_a_time.jpg?1707469202"
-                alt="" class="img-fluid m-3 rounded shadow-sm second-picture border">
+                alt="Picture of the Regina, Hook, Emma Swan, Henry, Belle, Rumple, Charming and Snowhite in Once Upon A Time" class="img-fluid m-3 rounded shadow-sm second-picture border">
         </div>
         <div class="m-4 pt-5 characters-profiles" id="cast">
             <h1>Cast: Main Characters</h1>
@@ -273,10 +273,10 @@
                 <div class="row align-items-center characters-profiles">
                     <div class="col-sm-2">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/589/original/jennifer-morrison.jpeg?1707478147"
-                            alt="" class="img-fluid border rounded cast-character">
+                            alt="Picture of Jennifer Morrison" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2 mb-4 ">
-                        <a href="https://www.imdb.com/name/nm0607185/" target="_blank">
+                        <a href="https://www.imdb.com/name/nm0607185/" target="_blank" title="Open IMDb">
                             <strong>Jennifer Morrison</strong></a>
                         <br>
                         Emma Swan
@@ -284,21 +284,21 @@
                     </div>
                     <div class="col-sm-2">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/590/original/lana-parrilla.jpeg?1707478155"
-                            alt="" class="img-fluid border rounded cast-character">
+                            alt="Picture of Lana Parrilla" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2 mb-4">
-                        <a href="https://www.imdb.com/name/nm0663469/?ref_=fn_al_nm_1" target="_blank"><strong>Lana
+                        <a href="https://www.imdb.com/name/nm0663469/?ref_=fn_al_nm_1" target="_blank" title="Open IMDb"><strong>Lana
                                 Parrilla</strong></a>
                         <br>
                         Evil Queen
                     </div>
                     <div class="col-sm-2">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/592/original/ginnifer-goodwin.jpeg?1707478168"
-                            alt="" class="img-fluid border rounded cast-character">
+                            alt="Picture of Ginnifer Goodwin" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2">
                         <a href="https://www.imdb.com/name/nm0329481/?ref_=nv_sr_srsg_1_tt_0_nm_7_q_Ginnifer%2520"
-                            target="_blank"><strong>Ginnifer Goodwin</strong></a>
+                            target="_blank" title="Open IMDb"><strong>Ginnifer Goodwin</strong></a>
                         <br>
                         Snowhite
                     </div>
@@ -307,31 +307,31 @@
                 <div class="row align-items-center">
                     <div class="col-sm-2">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/591/original/joshua-dallas.jpeg?1707478161"
-                            alt="" class="img-fluid border rounded cast-character">
+                            alt="Picture of Josh Dallas" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2 mb-4">
                         <a href="https://www.imdb.com/name/nm2796047/?ref_=nv_sr_srsg_0_tt_0_nm_8_q_Joshua%2520Dalas"
-                            target="_blank"><strong>Joshua Dallas</strong></a>
+                            target="_blank" title="Open IMDb"><strong>Joshua Dallas</strong></a>
                         <br>
                         Prince Charming
                     </div>
                     <div class="col-sm-2">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/594/original/robert-carlyle.jpeg?1707478193"
-                            alt="" class="img-fluid border rounded cast-character">
+                            alt="Picture of Robert Carlyle" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2 mb-4">
                         <a href="https://www.imdb.com/name/nm0001015/?ref_=nv_sr_srsg_0_tt_0_nm_8_q_robert%2520carl"
-                            target="_blank"><strong>Robert Carlyle</strong></a>
+                            target="_blank" title="Open IMDb"><strong>Robert Carlyle</strong></a>
                         <br>
                         Mr. Gold
                     </div>
                     <div class="col-sm-2">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/593/original/jared-s-gilmore.jpeg?1707478178"
-                            alt="" class="img-fluid border rounded cast-character">
+                            alt="Picture of Jared S. Gilmore" class="img-fluid border rounded cast-character">
                     </div>
                     <div class="col-sm-2 mb-4">
                         <a href="https://www.imdb.com/name/nm2765519/?ref_=nv_sr_srsg_0_tt_0_nm_2_q_jared%2520s%2520gilmore"
-                            target="_blank"><strong>Jared S. Gilmore</strong></a>
+                            target="_blank" title="Open IMDb"><strong>Jared S. Gilmore</strong></a>
                         <br>
                         Henry Mills
                     </div>
@@ -360,49 +360,49 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/630/original/once_upon_a_time-2.jpg?1707485504"
-                            class="d-block w-100" alt="...">
+                            class="d-block w-100" alt="The Evil Queen giving the apple to Snowhite">
                         <div class="carousel-caption d-none d-md-block">
                             <p>Snowhite and the Evil Queen</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/629/original/MV5BMTQ4MTgyNTM0NV5BMl5BanBnXkFtZTcwMDcwNDQ5Ng__._V1_.jpg?1707485494"
-                            class="d-block w-100" alt="...">
+                            class="d-block w-100" alt="Prince Charming breaking the spell on Snowhite">
                         <div class="carousel-caption d-none d-md-block">
                             <p>Prince Charming breaks the spell</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/627/original/rsz_13.jpg?1707485457"
-                            class="d-block w-100" alt="...">
+                            class="d-block w-100" alt="Picture of the Evil Queen, Cruella DeVil, Mr. Gold and Maleficent">
                         <div class="carousel-caption d-none d-md-block">
                             <p>Famous Villains</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/626/original/robbie-kay-in-emonce-upon-a-timeem.jpg?1707485449"
-                            class="d-block w-100" alt="...">
+                            class="d-block w-100" alt="Picture of Peter Pan with Captain Hook and his brother">
                         <div class="carousel-caption d-none d-md-block">
                             <p>Peter Pan with Captain Hook</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/624/original/descarga.jpeg?1707485422"
-                            class="d-block w-100" alt="...">
+                            class="d-block w-100" alt="Picture of Charming, Snow White, and 4 dwarfs">
                         <div class="carousel-caption d-none d-md-block">
                             <p>Snowhite, Prince Charming and the dwarfs</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/622/original/17731395183_300476f7a3_o.jpg?1707485410"
-                            class="d-block w-100" alt="...">
+                            class="d-block w-100" alt="Picture of the wedding between Rodbin Hood and the Witch of the West">
                         <div class="carousel-caption d-none d-md-block">
                             <p>Robin Hood's wedding</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/620/original/4x11_Belle_table_histoire_monde_Rumplestiltskin.jpg?1707485401"
-                            class="d-block w-100" alt="...">
+                            class="d-block w-100" alt="Picture of Belle and Mr. Gold">
                         <div class="carousel-caption d-none d-md-block">
                             <p>Beauty and the Beast</p>
                         </div>
@@ -427,14 +427,14 @@
                 Josh Dallas (Prince Charming) and Ginnifer Goodwin (Snow White) went on to marry in real life.
                 <br>
                 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/075/original/abf2a5a9c5222744_GettyImages-174150774.jpg?1707738754"
-                    alt="" class="img-fluid mt-3 did-you-know-images">
+                    alt="Picture of John Dallas and Ginnifer Goodwin" class="img-fluid mt-3 did-you-know-images">
 
             </div>
             <div class="m-3 text-center curiosities">
-                Most of the objects in Mr. Golds were brought in by the cast.
+                Most of the objects in Mr. Gold's were brought in by the cast.
                 <br>
                 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/079/original/maxresdefault.jpg?1707739245"
-                    alt="" class="img-fluid mt-3 curiosities-images">
+                    alt="Picture of Mr. Gold's pawnshop" class="img-fluid mt-3 curiosities-images">
             </div>
             <div class="m-3 text-center curiosities">
                 Several times during the series, Mr. Gold is seen wearing a wedding ring. This is because Robert Carlyle
@@ -443,7 +443,7 @@
                 to remove his own ring; he has even tweeted about it.
                 <br>
                 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/083/original/20823568ouatgold1280-1437176483365.jpg?1707739549"
-                    alt="" class="img-fluid mt-3 curiosities-images">
+                    alt="Picture of Robert Carlyle as Mr. Gold" class="img-fluid mt-3 curiosities-images">
             </div>
             <div class="m-3 text-center curiosities">
                 Of all of the Prince and Princess couples that could have been the focal point of the series, Snow White
@@ -452,7 +452,7 @@
                 produced.
                 <br>
                 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/090/original/Prince-Charming-And-Snow-White-disney-princess-couples-18702172-500-339.jpg?1707744350"
-                    alt="" class="img-fluid mt-3 curiosities-images">
+                    alt="Disney movie Snowhite and Prince Charming" class="img-fluid mt-3 curiosities-images">
             </div>
             <div class="m-3 text-center curiosities">
                 The creators formally offered the part of the Blue Fairy, a.k.a. Mother Superior to singer Lady Gaga.
@@ -461,14 +461,14 @@
                 Tracy.
                 <br>
                 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/091/original/1203554-keegan-connor-tracy-as-the-blue-fairy-on-once.jpg?1707744555"
-                    alt="" class="img-fluid mt-3 did-you-know-images">
+                    alt="Picture of Keegan Connor Tracy as the fairy godmother" class="img-fluid mt-3 did-you-know-images">
             </div>
         </div>
         <div class="m-4 pt-5" id="watch">
             <h1>Watch Episodes</h1>
             <div class="watch p-4">
                 <p>You can find all 7 seasons of Once Upon A Time on <a href="https://www.disneyplus.com/home"
-                        target="_blank">Disney Plus</a>
+                        target="_blank" title="Open in new tab">Disney Plus</a>
                 </p>
                 <div class="embed-responsive embed-responsive-16by9 video">
                     <iframe class="embed-responsive-item youtube-video" width="560" height="315"
@@ -480,7 +480,7 @@
 
                 <div class="button text-center">
                     <button type="button" class="btn btn-outline-success btn-lg m-4 border watch-button"><a
-                            href="https://www.disneyplus.com/series/once-upon-a-time/14p4BXYA2xok" target="_blank">Watch
+                            href="https://www.disneyplus.com/series/once-upon-a-time/14p4BXYA2xok" target="_blank" title="Open Disney+">Watch
                             Once
                             Upon A Time on
                             Disney+</a></button>
